--- a/showroom.html
+++ b/showroom.html
@@ -84,6 +84,18 @@
         </div>
     </footer>
     <script>
+        // Function to load the 3D model script based on screen width
+        function loadModelScriptBasedOnWidth() {
+            const screenWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+
+            if (screenWidth > 600) {
+                loadModelScript('3DModel-Third-Person.js', 'thirdPersonModel');
+                loadModelScript('3DModel-First-Person.js', 'firstPersonModel');
+            } else {
+                loadModelScript('3DModel-Third-Person.js', 'thirdPersonModel');
+            }
+        }
+
         // Function to load the 3D model script
         function loadModelScript(scriptUrl, modelId) {
             const container = document.getElementById('model-container');
@@ -100,9 +112,32 @@
             const newModel = document.createElement('div');
             newModel.id = modelId;
             container.appendChild(newModel);
+
         }
 
-        loadModelScript('3DModel-Third-Person.js', 'thirdPersonModel');
+        // Initial load based on screen width
+        loadModelScriptBasedOnWidth();
+
+        // Add event listeners for the buttons
+        document.getElementById('firstPersonBtn').addEventListener('click', function () {
+            const container = document.getElementById('model-container');
+            const firstCanvas = container.querySelector('canvas:nth-of-type(1)');
+            const secondCanvas = container.querySelector('canvas:nth-of-type(2)');
+            secondCanvas.style.position = 'relative';
+            secondCanvas.style.display = 'block';
+            firstCanvas.style.position = 'absolute';
+            firstCanvas.style.display = 'none';
+        });
+
+        document.getElementById('thirdPersonBtn').addEventListener('click', function () {
+            const container = document.getElementById('model-container');
+            const firstCanvas = container.querySelector('canvas:nth-of-type(2)');
+            const secondCanvas = container.querySelector('canvas:nth-of-type(1)');
+            firstCanvas.style.position = 'absolute';
+            firstCanvas.style.display = 'none';
+            secondCanvas.style.position = 'relative';
+            secondCanvas.style.display = 'block';
+        });
     </script>
 </body>
 
