Added more cars for the showroom

--- a/auto-show.html
+++ b/auto-show.html
@@ -9,8 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="auto-show.css">
-    <link rel="stylesheet" href="preview.css">
-    <link rel="stylesheet" href="mobile.css">
     <script src="mobile-menu.js"></script>
 </head>
 
@@ -71,12 +69,23 @@
     
             <div class="cars-container">
                 <div class="car-card">
-                    <img class="img-container" src="images/Lambo-Urus.png" alt="Car 1">
+                    <div class="img-container">
+                        <img src="images/Lambo-Urus.png" alt="Car 1">
+                    </div>
                     <div class="car-info">
                         <h3>2022 LAMBORGHINI URUS MANSORY</h3>
                     </div>
-                    <a href="showroom.html" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/lambo-aventador.glb" class="view-button">View in Showroom</a>
                 </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Porsche-carrera.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2015 PORSCHE 911 CARRERA</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/2015_-_porsche_911_carrera_s__mid-poly (1).glb" class="view-button">View in Showroom</a>
+                </div>                
             </div>
         </section>
     </div>
