Adjusted 3d camera settings, and added one more model

--- a/auto-show.html
+++ b/auto-show.html
@@ -75,7 +75,7 @@
                     <div class="car-info">
                         <h3>2022 LAMBORGHINI URUS MANSORY</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/lambo-aventador.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/modified_lamborghini_urus.glb" class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -85,7 +85,16 @@
                         <h3>2015 PORSCHE 911 CARRERA</h3>
                     </div>
                     <a href="showroom.html?car=3D Models/2015_-_porsche_911_carrera_s__mid-poly (1).glb" class="view-button">View in Showroom</a>
-                </div>                
+                </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Lambo-Aventador.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2022 LAMBORGHINI AVENTADOR</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/lambo-aventador.glb" class="view-button">View in Showroom</a>
+                </div>                  
             </div>
         </section>
     </div>
