Fixed bug with the mobile menu in auto-show room tab

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 cars
                 in the industry.</p>
 
-            <a href="#" class="cta-button">Check Now</a>
+            <a href="auto-show.html" class="cta-button">Check Now</a>
         </div>
     </div>
     <div class="cars-container">
