Adjusted Urus 3D Model

--- a/auto-show.html
+++ b/auto-show.html
@@ -73,7 +73,7 @@
                         <img src="images/Lambo-Urus.png" alt="Car 1">
                     </div>
                     <div class="car-info">
-                        <h3>2022 LAMBORGHINI URUS MANSORY</h3>
+                        <h3>2022 LAMBORGHINI URUS PERFORMANTE</h3>
                     </div>
                     <a href="showroom.html?car=3D Models/lamborghini_urus_graphite_capsule.glb" class="view-button">View in Showroom</a>
                 </div>
@@ -117,6 +117,7 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
+    <script src="API-Script.js"></script>
 </body>
 
 </html>
