Added loading animation for the 3D models

--- a/showroom.html
+++ b/showroom.html
@@ -58,7 +58,9 @@
         </nav>
     </header>
     <script src="mobile-menu.js"></script>
-    <div id="model-container"></div>
+    <div id="loader"></div>
+    <div id="model-container">
+    </div>
     <div class="view-buttons">
         <button id="firstPersonBtn">First Person View</button>
         <button id="thirdPersonBtn">Third Person View</button>
@@ -84,5 +86,4 @@
     </footer>
     <script type="module" src="3DModel-Scene-Switching.js"></script>
 </body>
-
 </html>
