Added new model

--- a/auto-show.html
+++ b/auto-show.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="nav-header" id="header">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img class="logo-img" src="images/logo.png" alt="Logo">
         </a>
         <div class="h1">
@@ -94,6 +94,15 @@
                         <h3>2022 LAMBORGHINI AVENTADOR</h3>
                     </div>
                     <a href="showroom.html?car=3D Models/lambo-aventador.glb" class="view-button">View in Showroom</a>
+                </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Lambo-Aventador.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2022 LAMBORGHINI AVENTADOR</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/2024_bmw_m3_touring.glb" class="view-button">View in Showroom</a>
                 </div>                  
             </div>
         </section>
