--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header class="nav-header" id="header">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img class="logo-img" src="images/logo.png" alt="Logo">
         </a>
         <div class="h1">
