Added new car to the show

--- a/auto-show.html
+++ b/auto-show.html
@@ -97,12 +97,12 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/Lambo-Aventador.png" alt="Car 2">
+                        <img src="images/Lamborghini-Gallardo.png" alt="Car 2">
                     </div>
                     <div class="car-info">
-                        <h3>2022 LAMBORGHINI AVENTADOR</h3>
+                        <h3>2007 LAMBORGHINI GALLARDO</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/2024_bmw_m3_touring.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/2007_-_lamborghini_gallardo_sl_rigged.glb" class="view-button">View in Showroom</a>
                 </div>                  
             </div>
         </section>
