Added 2 more cars to the show

--- a/auto-show.html
+++ b/auto-show.html
@@ -103,7 +103,25 @@
                         <h3>2007 LAMBORGHINI GALLARDO</h3>
                     </div>
                     <a href="showroom.html?car=3D Models/2007_-_lamborghini_gallardo_sl_rigged.glb" class="view-button">View in Showroom</a>
-                </div>                  
+                </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Toyota-Supra.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2020 TOYOTA SUPRA GR</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/toyota_gr_supra.glb" class="view-button">View in Showroom</a>
+                </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Porshe-Turbo-S.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2016 PORSHE 911 TURBO S</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/Porsche_911_Turbo_S_Coupe_2016.FBX" class="view-button">View in Showroom</a>
+                </div>                         
             </div>
         </section>
     </div>
