Added meta property img for the logo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="preload" as="image" href="images/lamborghini-huracan.webp">
     <link rel="preload" as="image" href="images/mercedes-gt.webp">
     <link rel="preload" as="image" href="images/BMW-M8.webp">
+    <meta property="og:image" content="images/logo.png">
 </head>
 
 <body>
