Add large file tracked with LFS

--- a/auto-show.html
+++ b/auto-show.html
@@ -122,7 +122,16 @@
                         <h3>2016 PORSHE 911 TURBO S</h3>
                     </div>
                     <a href="showroom.html?car=3D Models/Porsche_911_Turbo_S_Coupe_2016.FBX" class="view-button">View in Showroom</a>
-                </div>                         
+                </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/1558229847_zsulre3r-1.jpg" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2017 LINCOLN NAVIGATOR</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/New folder/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX" class="view-button">View in Showroom</a>
+                </div>                              
             </div>
         </section>
     </div>
