--- a/auto-show.html
+++ b/auto-show.html
@@ -130,7 +130,7 @@
                     <div class="car-info">
                         <h3>2017 LINCOLN NAVIGATOR</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/New folder/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/Lincoln 3D Model/Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX" class="view-button">View in Showroom</a>
                 </div>                              
             </div>
         </section>
