updated three.js version

--- a/auto-show.html
+++ b/auto-show.html
@@ -64,10 +64,10 @@
             <h1>Welcome to Our Auto Show</h1>
             <p>Discover the Latest and Greatest Cars</p>
         </header>
-    
+
         <section>
             <h2>Available Cars</h2>
-    
+
             <div class="cars-container">
                 <div class="car-card">
                     <div class="img-container">
@@ -76,7 +76,8 @@
                     <div class="car-info">
                         <h3>2022 LAMBORGHINI URUS PERFORMANTE</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/lamborghini_urus_graphite_capsule.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/lamborghini_urus_graphite_capsule.glb" class="view-button">View
+                        in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -85,7 +86,8 @@
                     <div class="car-info">
                         <h3>2015 PORSCHE 911 CARRERA</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/2015_-_porsche_911_carrera_s__mid-poly (1).glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/2015_-_porsche_911_carrera_s__mid-poly (1).glb"
+                        class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -103,7 +105,8 @@
                     <div class="car-info">
                         <h3>2007 LAMBORGHINI GALLARDO</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/2007_-_lamborghini_gallardo_sl_rigged.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/2007_-_lamborghini_gallardo_sl_rigged.glb"
+                        class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -121,7 +124,8 @@
                     <div class="car-info">
                         <h3>2016 PORSHE 911 TURBO S</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/Porsche_911_Turbo_S_Coupe_2016.FBX" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/Porsche_911_Turbo_S_Coupe_2016.FBX" class="view-button">View in
+                        Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -130,8 +134,9 @@
                     <div class="car-info">
                         <h3>2017 LINCOLN NAVIGATOR</h3>
                     </div>
-                    <a href="showroom.html?car=Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX" class="view-button">View in Showroom</a>
-                </div>                              
+                    <a href="showroom.html?car=Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX"
+                        class="view-button">View in Showroom</a>
+                </div>
             </div>
         </section>
     </div>
