--- a/showroom.html
+++ b/showroom.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="showroom.css">
     <meta property="og:image" content="images/logo.png">
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@v0.152.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@v0.152.0/examples/jsm/"
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -87,4 +95,5 @@
     </footer>
     <script type="module" src="3DModel-Scene-Switching.js"></script>
 </body>
+
 </html>
