newest version of three.js

--- a/auto-show.html
+++ b/auto-show.html
@@ -134,7 +134,7 @@
                     <div class="car-info">
                         <h3>2017 LINCOLN NAVIGATOR</h3>
                     </div>
-                    <a href="showroom.html?car=Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX"
+                    <a href="showroom.html?car=Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.fbx"
                         class="view-button">View in Showroom</a>
                 </div>
             </div>
