Uploaded new model

--- a/auto-show.html
+++ b/auto-show.html
@@ -129,13 +129,22 @@
                 </div>
                 <div class="car-card">
                     <div class="img-container">
-                        <img src="images/1558229847_zsulre3r-1.jpg" alt="Car 2">
+                        <img src="images/Screenshot (1624).png" alt="Car 2">
                     </div>
                     <div class="car-info">
                         <h3>2017 LINCOLN NAVIGATOR</h3>
                     </div>
                     <a href="showroom.html?car=Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX"
                         class="view-button">View in Showroom</a>
+                </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Mclaren P1.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2021 MCLAREN P1</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/love_spells_310_882-6330_in_des_moines_ia.glb" class="view-button">View in Showroom</a>
                 </div>
             </div>
         </section>
