--- a/showroom.html
+++ b/showroom.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +19,6 @@
         }
     </script>
 </head>
-
 <body>
     <header class="nav-header" id="header">
         <a href="index.html" class="logo">
@@ -67,8 +67,7 @@
     </header>
     <script src="mobile-menu.js"></script>
     <div id="loader"></div>
-    <div id="model-container">
-    </div>
+    <div id="model-container"></div>
     <div class="view-buttons">
         <button id="firstPersonBtn">First Person View</button>
         <button id="thirdPersonBtn">Third Person View</button>
