Added new model

--- a/auto-show.html
+++ b/auto-show.html
@@ -146,6 +146,15 @@
                     </div>
                     <a href="showroom.html?car=3D Models/love_spells_310_882-6330_in_des_moines_ia.glb" class="view-button">View in Showroom</a>
                 </div>
+                <div class="car-card">
+                    <div class="img-container">
+                        <img src="images/Tesla-Model-3.png" alt="Car 2">
+                    </div>
+                    <div class="car-info">
+                        <h3>2020 TESLA MODEL 3</h3>
+                    </div>
+                    <a href="showroom.html?car=3D Models/tesla_model_3_realistic_free.glb" class="view-button">View in Showroom</a>
+                </div>
             </div>
         </section>
     </div>
