Reupload of 3d model and renamed the models

--- a/auto-show.html
+++ b/auto-show.html
@@ -76,7 +76,7 @@
                     <div class="car-info">
                         <h3>2022 LAMBORGHINI URUS PERFORMANTE</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/lamborghini_urus_graphite_capsule.glb" class="view-button">View
+                    <a href="showroom.html?car=3D Models/Lamborghini-Urus-2020.glb" class="view-button">View
                         in Showroom</a>
                 </div>
                 <div class="car-card">
@@ -86,7 +86,7 @@
                     <div class="car-info">
                         <h3>2015 PORSCHE 911 CARRERA</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/2015_-_porsche_911_carrera_s__mid-poly (1).glb"
+                    <a href="showroom.html?car=3D Models/Porsche-Carrera-2015.glb"
                         class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
@@ -96,7 +96,7 @@
                     <div class="car-info">
                         <h3>2022 LAMBORGHINI AVENTADOR</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/lambo-aventador.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/Lamborghini-Aventador-2020.glb" class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -105,7 +105,7 @@
                     <div class="car-info">
                         <h3>2007 LAMBORGHINI GALLARDO</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/2007_-_lamborghini_gallardo_sl_rigged.glb"
+                    <a href="showroom.html?car=3D Models/Lamborghini-Galardo-2007.glb"
                         class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
@@ -115,16 +115,16 @@
                     <div class="car-info">
                         <h3>2020 TOYOTA SUPRA GR</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/toyota_gr_supra.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/Toyota-Gr Supra-2020.glb" class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
                         <img src="images/Porshe-Turbo-S.png" alt="Car 2">
                     </div>
                     <div class="car-info">
-                        <h3>2016 PORSHE 911 TURBO S</h3>
+                        <h3>2016 PORSCHE 911 TURBO S</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/Porsche_911_Turbo_S_Coupe_2016.FBX" class="view-button">View in
+                    <a href="showroom.html?car=3D Models/Porshe-911-2016.FBX" class="view-button">View in
                         Showroom</a>
                 </div>
                 <div class="car-card">
@@ -134,7 +134,7 @@
                     <div class="car-info">
                         <h3>2017 LINCOLN NAVIGATOR</h3>
                     </div>
-                    <a href="showroom.html?car=Lincoln_Navigator_(Mk4)_(U554)_Black_Label_HQinterior_2017.FBX"
+                    <a href="showroom.html?car=Lincoln-Navigator-2016.FBX"
                         class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
@@ -144,7 +144,7 @@
                     <div class="car-info">
                         <h3>2021 MCLAREN P1</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/love_spells_310_882-6330_in_des_moines_ia.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/Mclaren-P1-2020.glb" class="view-button">View in Showroom</a>
                 </div>
                 <div class="car-card">
                     <div class="img-container">
@@ -153,7 +153,7 @@
                     <div class="car-info">
                         <h3>2020 TESLA MODEL 3</h3>
                     </div>
-                    <a href="showroom.html?car=3D Models/tesla_model_3_realistic_free.glb" class="view-button">View in Showroom</a>
+                    <a href="showroom.html?car=3D Models/Tesla-Model 3-2020.glb" class="view-button">View in Showroom</a>
                 </div>
             </div>
         </section>
