--- a/showroom.html
+++ b/showroom.html
@@ -92,6 +92,7 @@
         </div>
     </footer>
     <script type="module" src="3DModel-Scene-Switching.js"></script>
+    <script src="Cars-Data.js"></script>
 </body>
 
 </html>
