New proxy server logic

--- a/showroom.html
+++ b/showroom.html
@@ -19,6 +19,7 @@
         }
     </script>
 </head>
+
 <body>
     <header class="nav-header" id="header">
         <a href="index.html" class="logo">
@@ -71,6 +72,16 @@
     <div class="view-buttons">
         <button id="firstPersonBtn">First Person View</button>
         <button id="thirdPersonBtn">Third Person View</button>
+    </div>
+    <div id="cars-data-container">
+        <h1>↓ Vehicle Specifications ↓</h1>
+        <div id="outside-wrapper">
+            <div class="cars-data"></div>
+        </div>
+        <h1>↓ Vehicle Equipment ↓</h1>
+        <div id="outside-wrapper-equipment">
+            <div class="cars-equipment"></div>
+        </div>
     </div>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
